z-index fix, scale overflow fix on video-selection

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -80,9 +80,13 @@
 @keyframes zoom-in {
   from {
     scale: 1;
+    /* transform: translateX(0); */
+    z-index: 1;
   }
   to {
-    scale: 1.2;
+    scale: 1.1;
+    /* transform: translateX(-20rem); */
+    z-index: 100;
   }
 }
 
